--- a/src/style/chronograf.scss
+++ b/src/style/chronograf.scss
@@ -130,6 +130,8 @@
 @import 'src/billing/components/Usage/AlertStatusCancelled.scss';
 @import 'src/billing/components/PayAsYouGo/PlanTypePanel.scss';
 @import 'src/billing/components/BillingPage.scss';
+@import 'src/checkout/LogoWithCubo.scss';
+@import 'src/checkout/PoweredByStripeLogo.scss';
 
 // External
 @import '../../node_modules/@influxdata/react-custom-scrollbars/dist/styles.css';
