feat: added some missing files, consolidated yup, need to remove formik and yup

--- a/src/style/chronograf.scss
+++ b/src/style/chronograf.scss
@@ -134,6 +134,8 @@
 @import 'src/checkout/PoweredByStripeLogo.scss';
 @import 'src/usage/GraphTypeSwitcher.scss';
 @import 'src/usage/BillingStatsPanel.scss';
+@import 'src/usage/SuccessOverlay.scss';
+@import 'src/usage/CheckoutPage.scss';
 
 // External
 @import '../../node_modules/@influxdata/react-custom-scrollbars/dist/styles.css';
