feat: removing formik

--- a/src/checkout/SuccessOverlay.scss
+++ b/src/checkout/SuccessOverlay.scss
@@ -18,7 +18,8 @@
 }
 
 .checkout-overlay--view__empty {
-  background-image: url('~images/checkout-overlay--success.svg');
+  // TODO(ariel): get this image asset
+  // background-image: url('~images/checkout-overlay--success.svg');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
